--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Inicio</title>
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 
 <header>
 	<nav>
 		<ul>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
+			<li><a href="">Inicio</a></li>
+			<li><a href="">Productos</a></li>
+			<li><a href="">Locales</a></li>
+			<li><a href="">Ofertas</a></li>
+			<li><a href="">Contactenos</a></li>
 		</ul>
 	</nav>
 </header>
+
+
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto doloremque, iste officiis quidem nulla, possimus suscipit soluta atque est quasi id, expedita, facilis ratione accusantium. Error earum et aliquam, quisquam.
 	
 </body>
 </html>
