--- a/index.html
+++ b/index.html
@@ -9,20 +9,26 @@
 </head>
 <body>
 
-<header>
-	<nav>
-		<ul>
-			<li><a href="">Inicio</a></li>
-			<li><a href="">Productos</a></li>
-			<li><a href="">Locales</a></li>
-			<li><a href="">Ofertas</a></li>
-			<li><a href="">Contactenos</a></li>
+<header class="Header">
+	<nav class="menu">
+		<ul class="lista">
+			<li class="item"><a class="letras" href="">Inicio</a></li>
+			<li class="item"><a class="letras" href="">Productos</a></li>
+			<li class="item"><a class="letras" href="">Locales</a></li>
+			<li class="item"><a class="letras" href="">Ofertas</a></li>
+			<li class="item"><a class="letras" href="">Contactenos</a></li>
+			<input class="nav-search" type="search" placeholder="Que desea buscar"></li>
 		</ul>
+		
 	</nav>
+
+
+
+
 </header>
 
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto doloremque, iste officiis quidem nulla, possimus suscipit soluta atque est quasi id, expedita, facilis ratione accusantium. Error earum et aliquam, quisquam.
+
 	
 </body>
 </html>
