--- a/index.html
+++ b/index.html
@@ -6,18 +6,26 @@
 	<title>Inicio</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/estilos.css">
+	<link rel="stylesheet" href="css/fontello.css">
 </head>
 <body>
 
 <header class="Header">
 	<nav class="menu">
 		<ul class="lista">
-			<li class="item"><a class="letras" href="">Inicio</a></li>
-			<li class="item"><a class="letras" href="">Productos</a></li>
-			<li class="item"><a class="letras" href="">Locales</a></li>
-			<li class="item"><a class="letras" href="">Ofertas</a></li>
-			<li class="item"><a class="letras" href="">Contactenos</a></li>
-			<input class="nav-search" type="search" placeholder="Que desea buscar"></li>
+			<li class="item"><a class="letras" href=""><span class="icon-home">Inicio</a></li>
+			<li class="item"><a class="letras" href=""><span class="icon-laptop">Productos</a></li>
+			<li class="item"><a class="letras" href=""><span class="icon-location">Locales</a></li>
+			<li class="item"><a class="letras" href=""><span class="icon-dollar">Ofertas</a></li>
+			<li class="item"><a class="letras" href=""><span class="icon-">Conactenos</a></li>
+			<input class="nav-search" type="search" placeholder="Que desea buscar">
+			 <label class="icon-search"></label> 
+
+  
+			
+			
+
+			
 		</ul>
 		
 	</nav>
@@ -27,6 +35,45 @@
 
 </header>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<footer>
+	
+
+
+
+
+
+
+
+
+
+
+</footer>
 
 
 	
