--- a/index.html
+++ b/index.html
@@ -2,80 +2,31 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<title>Document</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Inicio</title>
-	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/estilos.css">
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/fontello.css">
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
-<header class="Header">
-	<nav class="menu">
+<header>
+	<nav class="nav">
 		<ul class="lista">
-			<li class="item"><a class="letras" href=""><span class="icon-home">Inicio</a></li>
-			<li class="item"><a class="letras" href=""><span class="icon-laptop">Productos</a></li>
-			<li class="item"><a class="letras" href=""><span class="icon-location">Locales</a></li>
-			<li class="item"><a class="letras" href=""><span class="icon-dollar">Ofertas</a></li>
-			<li class="item"><a class="letras" href=""><span class="icon-">Conactenos</a></li>
-			<input class="nav-search" type="search" placeholder="Que desea buscar">
-			 <label class="icon-search"></label> 
-
-  
-			
-			
-
-			
+			<li class="item"><a class="icon-home letrasm" href="">Inicio</a></li>
+			<li class="item"><a class="letrasm" href="">Productos</a></li>
+			<li class="item"><a class="letrasm" href="">Locales</a></li>
+			<li class="item"><a class="letrasm" href="">Ofertas</a></li>
+			<li class="item"><a class="letrasm" href="">Contactenos</a></li>
+			<div class="searchfather">
+			<input class="cajatexto"  type="search" placeholder="Que desea buscar">
+			<label class="icon-search"></label></div>
 		</ul>
-		
+			<a class="iniciar" href="">Iniciar Seccion</a>
+			<a class="registro"href="">Registrarse</a>
 	</nav>
-
-
-
-
 </header>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<footer>
-	
-
-
-
-
-
-
-
-
-
-
-</footer>
-
-
 	
 </body>
 </html>
