--- a/index.html
+++ b/index.html
@@ -7,26 +7,64 @@
 	<link rel="stylesheet" href="css/estilos.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/fontello.css">
+	<link rel="stylesheet" href="css/hover-min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Russo+One&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Courgette&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<script src="js/prefixfree.min.js"></script>
 </head>
 <body>
 
 <header>
 	<nav class="nav">
 		<ul class="lista">
-			<li class="item"><a class="icon-home letrasm" href="">Inicio</a></li>
-			<li class="item"><a class="letrasm" href="">Productos</a></li>
-			<li class="item"><a class="letrasm" href="">Locales</a></li>
-			<li class="item"><a class="letrasm" href="">Ofertas</a></li>
-			<li class="item"><a class="letrasm" href="">Contactenos</a></li>
+			<li class="item"><a class="icon-home letrasm hvr-wobble-horizontal" href="">Inicio</a></li>
+			<li class="item"><a class="letrasm hvr-wobble-horizontal" href="">Productos</a></li>
+			<li class="item"><a class="letrasm hvr-wobble-horizontal" href="">Locales</a></li>
+			<li class="item"><a class="letrasm hvr-wobble-horizontal" href="">Ofertas</a></li>
+			<li class="item"><a class="letrasm hvr-wobble-horizontal" href="">Contactenos</a></li>
 			<div class="searchfather">
 			<input class="cajatexto"  type="search" placeholder="Que desea buscar">
 			<label class="icon-search"></label></div>
 		</ul>
-			<a class="iniciar" href="">Iniciar Seccion</a>
-			<a class="registro"href="">Registrarse</a>
+			<a class="iniciar hvr-wobble-horizontal" href="">Iniciar Seccion</a>
+			<a class="registro hvr-wobble-horizontal"href="">Registrarse</a>
 	</nav>
 </header>
+
+
+
+<section class="seccion">
+	
+	<figure class="figure1">
+
+			<img class="img1" src="img/computador.png">
+
+			<img class="img1" src="img/tablets.png">
+
+			<h1 class="letra">Global Technology</h1>
+			<p class="parrafo">Consulta cualquier producto de tecnologia que se vendan
+			en los locales y centros comerciales de tu ciudad con tan solo un par de clicks</p>
+			
+
+
+			
+			
+			
+	</figure>
+
+
+	<figure class="figure2">
+			<img class="img3" src="img/celular.png">
+
+			<img class="img4" src="img/camara.png">
+
+
+			<div class="caja"></div>
+		
+	</figure>
+
+</section>
 	
 </body>
 </html>
