--- a/index.html
+++ b/index.html
@@ -33,38 +33,86 @@
 </header>
 
 
-
 <section class="seccion">
 	
-	<figure class="figure1">
 
-			<img class="img1" src="img/computador.png">
+	<article class="articulo1">
 
-			<img class="img1" src="img/tablets.png">
+			<figure class="figure1">
 
-			<h1 class="letra">Global Technology</h1>
-			<p class="parrafo">Consulta cualquier producto de tecnologia que se vendan
+				<img class="img1" src="img/computador.png">
+
+				<img class="img1" src="img/tablets.png">
+			</figure>
+
+			<aside class="aside">	
+	
+				<h1 class="letra">Global Technology</h1>
+				<p class="parrafo">Consulta cualquier producto de tecnologia que se vendan
 			en los locales y centros comerciales de tu ciudad con tan solo un par de clicks</p>
-			
+			</aside>			
+	
+
+	</article>
 
 
-			
-			
-			
-	</figure>
 
 
-	<figure class="figure2">
+
+	<article class="articulo2">
+		<figure class="figure2">
 			<img class="img3" src="img/celular.png">
 
 			<img class="img4" src="img/camara.png">
+		</figure>	
 
 
-			<div class="caja"></div>
-		
-	</figure>
+			<figure class="caja"></figure>
+
+	</article>
+
 
 </section>
+
+
+
+
+
+<footer class="piedepagina">
+<section class="seccionfoter">
+
+<article class="contact">
+<h3 class="titlecontactenos">Contactenos</h3>
+
+
+
+
+<p class="icon-mail">tecnologiaglobal@hotmail.com</p>
+
+<p class="icon-phone">3188308972</p>
+<p class=" face icon-facebook-squared"> Facebook</p>
+
+</article>
+
+
+
+<article class="acerc">
+<h3 class="titleacerc">Acerca de</h3>
+
+
+
+
+<p class="icon-mail">Global Technology</p>
+
+<p class="icon-phone">Terminos y condiciones</p>
+<p class=" face icon-facebook-squared"> Preguntas frecuentes</p>
+
+</article>
+	
+
+</section>
+
+</footer>
 	
 </body>
 </html>
