index terminato final

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 
 
 
-<p class="icon-mail">Global Technology</p>
+<p class="icon-globe">Global Technology</p>
 
-<p class="icon-phone">Terminos y condiciones</p>
-<p class=" face icon-facebook-squared"> Preguntas frecuentes</p>
+<p class="icon-note">Terminos y condiciones</p>
+<p class=" icon-help-circled"> Preguntas frecuentes</p>
 
 </article>
 	
